--- a/BitlabSelection-war/nbproject/project.properties
+++ b/BitlabSelection-war/nbproject/project.properties
@@ -34,6 +34,7 @@ file.reference.jasypt-1.9.3.jar=..\\lib\\jasypt-1.9.3.jar
 file.reference.javax.activation-1.2.0.jar=..\\lib\\javax.activation-1.2.0.jar
 file.reference.javax.annotation-api-1.3.1.jar=..\\lib\\javax.annotation-api-1.3.1.jar
 file.reference.javax.mail-1.6.2.jar=..\\lib\\javax.mail-1.6.2.jar
+file.reference.mysql-connector-java-8.0.20.jar=..\\lib\\mysql-connector-java-8.0.20.jar
 file.reference.primefaces-8.0.jar=..\\lib\\primefaces-8.0.jar
 file.reference.slf4j-api-1.7.9.jar=..\\lib\\slf4j-api-1.7.9.jar
 includes=**
@@ -52,7 +53,8 @@ javac.classpath=\
     ${file.reference.javax.mail-1.6.2.jar}:\
     ${file.reference.primefaces-8.0.jar}:\
     ${file.reference.slf4j-api-1.7.9.jar}:\
-    ${file.reference.jasypt-1.9.3.jar}
+    ${file.reference.jasypt-1.9.3.jar}:\
+    ${file.reference.mysql-connector-java-8.0.20.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
