--- a/BITLAB-ejb/nbproject/project.properties
+++ b/BITLAB-ejb/nbproject/project.properties
@@ -22,8 +22,6 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.jasypt-1.9.0.jar=..\\lib\\jasypt-1.9.0.jar
-file.reference.slf4j-api-1.7.9.jar=..\\lib\\slf4j-api-1.7.9.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -37,9 +35,7 @@ javac.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}:\
     ${libs.eclipselinkmodelgen.classpath}:\
     ${libs.eclipselink.classpath}:\
-    ${libs.hibernate4-persistence.classpath}:\
-    ${file.reference.jasypt-1.9.0.jar}:\
-    ${file.reference.slf4j-api-1.7.9.jar}
+    ${libs.hibernate4-persistence.classpath}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
